# PySparkCommonFunc

./: .gitignore  README.md  pyproject.toml
PySparkBasics/: Accumulator.py  BroadcastVariable.py
PySparkBasics/L01_PySpark_Intro/: S03_RepartitionAndCoalesce.py  S06_SplitDataToMultipleGroups.py
PySparkBasics/L02_DataFrame/: DealWithDuplicates.py  FilterRows.py  GroupByExp.py  JoinsBetweenDF.py  RandomSplitExp.py  TimeDateExp.py  UDFExample.py  UnionDataFrame.py
PySparkBasics/L02_DataFrame/S01_DataStructures/: 02_ColumnClassExp.py  03_ArrayTypeColumn.py  TimeDateExp.py
data/: doc_patient_relation.csv  doctors.csv  patients.csv  per.xls  test_lines.csv
data/county_geo_parquet/: .part-00000-b91d62a0-e28d-429d-aa47-196b194460c1-c000.snappy.parquet.crc  part-00000-b91d62a0-e28d-429d-aa47-196b194460c1-c000.snappy.parquet
data/midares/: PJC.csv
docs/: Install_spark_4.0_on_debian.md  Install_spark_on_debian.md  install_spark_on_windows.md
notebooks/chanlleges/: PER.ipynb  didomi.ipynb
pysparkbasics/L01_PySpark_Intro/: S03_RepartitionAndCoalesce.py  S05_Accumulator.py  S06_SplitDataToMultipleGroups.py
pysparkbasics/L02_DataFrame/: DealWithNullValues.py  GetResultWithCollectAndSelect.py  JoinsBetweenDF.py  SortRows.py  UnionDataFrame.py  WithColumnExp.py
sparkcommonfunc/data_transformation/: ColumnClassExp.py  ConvertMultiColumnToOneColumn.py  ConvertMultiColumnToOneColumnAndBack.py  CreateNewColWithMappingFromADict.py  JoinsBetweenDF.py  PivotRowToColumnAndBack.py  ReturnValofAColumnAsList.py  UdfReturnComplexeType.py
tests/: test_sparkcommonfunc.py
(+127 files in other folders)
