[tool.poetry]
name = "SparkCommonFunc"
version = "0.1.0"
description = ""
authors = ["pengfei <liu.pengfei@hotmail.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.1.1"
deltalake = "^0.4.8"
matplotlib = "^3.4.2"
pandas = "^1.2.4"
jupyter = "^1.0.0"
ipykernel = "^6.0.3"
datasets = "^1.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
